<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_recipe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="412dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_cook_time"
                android:layout_width="409dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCookingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cook_time"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPreparationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_prep_time"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_step_by_step"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="166dp">

                <CheckBox
                    android:id="@+id/tag4"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag8"
                    android:text="@string/tag4" />

                <CheckBox
                    android:id="@+id/tag9"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag3"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_toEndOf="@+id/tag0"
                    android:layout_toRightOf="@+id/tag0"
                    android:text="@string/tag9" />

                <CheckBox
                    android:id="@+id/tag2"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag1"
                    android:layout_marginTop="0dp"
                    android:text="@string/tag2"
                    tools:text="@string/tag2" />

                <CheckBox
                    android:id="@+id/tag7"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag6"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/tag0"
                    android:layout_toRightOf="@+id/tag0"
                    android:text="@string/tag7"
                    tools:text="@string/tag7" />

                <CheckBox
                    android:id="@+id/tag3"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag2"
                    android:text="@string/tag3" />

                <CheckBox
                    android:id="@+id/tag8"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag7"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_toEndOf="@+id/tag0"
                    android:layout_toRightOf="@+id/tag0"
                    android:text="@string/tag8" />

                <CheckBox
                    android:id="@+id/tag1"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag0"
                    android:layout_marginTop="0dp"
                    android:text="@string/tag1" />

                <CheckBox
                    android:id="@+id/tag6"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag5"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/tag0"
                    android:layout_toRightOf="@+id/tag0"
                    android:text="@string/tag6" />

                <CheckBox
                    android:id="@+id/tag0"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:text="@string/tag0" />

                <CheckBox
                    android:id="@+id/tag5"
                    android:layout_width="100pt"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_toEndOf="@+id/tag0"
                    android:layout_toRightOf="@+id/tag0"
                    android:text="@string/tag5" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/hint_picture" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="170dp"
                android:layout_height="105dp"
                android:layout_gravity="center"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <Button
                android:id="@+id/add_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center|right|center_vertical"
                android:layout_marginTop="16dp"
                android:text="@string/hint_picture" />

            <Button
                android:id="@+id/submitRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B1A1A1"
                android:text="submit" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>